tests/parse-fail/bad_fn_type3.fl
pub mod foo {
    pub struct Foo {
        pub foo : fn(asdf asdf) -> !;
    }
}
